Cycles crash when baking and Pricipled Volume materials are in the scene #66604

Closed
opened 2019-07-09 13:29:47 +02:00 by Johnny Pettersson · 13 comments

System Information
Operating system: Windows-10-10.0.18362 64 Bits
Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86

Blender Version
Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-08 23:33, hash: ac8c795429
Worked: (optional)

Short description of error
When baking the texture for the Suzanne object, Blender crash.
If I tick 'Disable in Renders' for the smoke object, or remove the smoke object with Principled Volume material, it bakes fine.

Exact steps for others to reproduce the error
Open the attached .blend and click Bake. _Crashes with volumetrics.blend

**System Information** Operating system: Windows-10-10.0.18362 64 Bits Graphics card: GeForce GTX 1070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 430.86 **Blender Version** Broken: version: 2.80 (sub 74), branch: master, commit date: 2019-07-08 23:33, hash: `ac8c795429` Worked: (optional) **Short description of error** When baking the texture for the Suzanne object, Blender crash. If I tick 'Disable in Renders' for the smoke object, or remove the smoke object with Principled Volume material, it bakes fine. **Exact steps for others to reproduce the error** Open the attached .blend and click Bake. [_Crashes with volumetrics.blend](https://archive.blender.org/developer/F7578942/_Crashes_with_volumetrics.blend)

Added subscriber: @JPO

Added subscriber: @JPO
Member

Added subscriber: @Jeroen-Bakker

Added subscriber: @Jeroen-Bakker
Member

I am unable to reproduce this issue by following the mentioned steps (Linux/AMD Pro)

I am unable to reproduce this issue by following the mentioned steps (Linux/AMD Pro)

Added subscriber: @a.monti

Added subscriber: @a.monti

I can reproduce the crash on Windows 8.1, 4.5.0 NVIDIA 419.72 (GT 740m)

This log is from a debug build of some days ago, but it also crashes with the latest buildbot one.
blender_debug_output.txt

I can reproduce the crash on Windows 8.1, 4.5.0 NVIDIA 419.72 (GT 740m) This log is from a debug build of some days ago, but it also crashes with the latest buildbot one. [blender_debug_output.txt](https://archive.blender.org/developer/F7581748/blender_debug_output.txt)

Added subscribers: @Sergey, @mano-wii

Added subscribers: @Sergey, @mano-wii

I also was not able to reproduce the crash (Windows64/Radeon RX 480).
But I was able to replicate the assert shown in the previous comment.
That assert was added in 7b356a85 by @Sergey

I also was not able to reproduce the crash (Windows64/Radeon RX 480). But I was able to replicate the assert shown in the previous comment. That assert was added in 7b356a85 by @Sergey

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can't reproduce this either.

@Sergey can you reproduce this with a nvidia card?

I can't reproduce this either. @Sergey can you reproduce this with a nvidia card?
Sergey Sharybin self-assigned this 2019-07-11 13:02:16 +02:00

Will give it a try.
Assigning to self, so it's not lost.

Will give it a try. Assigning to self, so it's not lost.

This issue was referenced by blender/cycles@17ea9adf56

This issue was referenced by blender/cycles@17ea9adf5620ccbde046ae7d8f2ae1aaddbaa215

This issue was referenced by 7ad21c3876

This issue was referenced by 7ad21c3876c2453f11fd509a0157639d615567fc

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#66604
No description provided.